Debug: add appliedFilter stores the progressively filtered dataset so filtering does not reset.